alignment fix

--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body {
   overflow-x: hidden;
   font-family: 'Red Hat Display', sans-serif;
 }
+a {
+  text-decoration: none;
+}
 .content {
   max-width: 1200px;
   margin: 0 auto;
@@ -153,11 +156,15 @@ body {
   font-size: 0.7rem;
   font-weight: 800;
 }
+
 .hiddenDiv {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.5s ease-in-out;
   background-color: #edecf0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hiddenDiv.active {
@@ -167,6 +174,7 @@ body {
 section {
   display: flex;
   flex: 2;
+  margin-bottom: 2rem;
 }
 .leftSec {
   background-color: white;
@@ -176,61 +184,51 @@ section {
   min-width: 550px;
   padding: 2rem;
   position: relative;
-  min-height: 300px;
 }
 .info {
-  line-height: 1.5;
+  line-height: 1.3;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
-.infoTwo {
-  line-height: 1.5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.infoTop {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.infoBottom {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex: 3;
-}
-.infoBottomLeft {
-  flex: 2;
-  width: 100%;
 }
 .infoBottomRight {
   flex: 1;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.infoBottomLeft {
+  flex: 2;
+  margin: -1.2rem 1rem;
 }
 
 .Heading {
   font-size: 2.5rem;
   font-weight: 800;
   color: #290644;
+  text-align: left;
 }
 .HeadingTwo {
   font-size: 2rem;
   font-weight: 800;
   color: #290644;
+  text-align: left;
   margin: 1.5rem 0rem 1rem 2rem;
 }
 .desc {
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 400;
-  padding-top: 1rem;
   color: #474747;
-  max-height: 160px;
-  overflow: hidden;
-  transition: max-height 0.3s ease;
+  padding-top: 0.5rem;
+  line-height: 1.3;
+  width: 65%;
+  word-spacing: 2px;
+}
+
+.desc.expanded {
+  max-height: 1000px;
 }
 .descTwin {
   font-size: 1rem;
@@ -289,8 +287,7 @@ section {
   flex: 1;
   background-color: rgb(255, 255, 255);
   border-radius: 5px;
-  min-height: 300px;
-  min-width: 550px;
+  min-width: 580px;
 }
 
 .items {
@@ -328,37 +325,35 @@ section {
   font-weight: 700;
   color: #9381a0;
 }
-.details {
-  width: 100%;
-}
 .detailsWrap {
   display: flex;
   align-items: center;
-  flex: 10;
-
+  flex: 17;
   padding: 5px 2rem;
 }
 
 .company {
-  width: 100px;
-  height: 80px;
-  padding: 1rem;
+  width: 120px;
+  /* height: 80px; */
+  padding: 0.5rem;
   border-radius: 5px;
   flex: 1;
+  object-fit: contain;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 .amount {
   flex: 4;
-  width: 100%;
   display: flex;
   flex-direction: column;
-  margin-left: 40px;
+  margin-left: 20px;
 }
 .amountTwo {
   flex: 4;
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-left: 10px;
+  margin-left: -100px;
 }
 .jusqu {
   font-size: 0.9rem;
@@ -430,11 +425,14 @@ section {
   align-items: center;
   height: 2rem;
   border: 1px solid black;
+  font-weight: 700;
+  color: #290644;
+  font-size: 0.8rem;
 }
 .sec-2 {
   background-color: white;
   margin-top: 1rem;
-  padding: 0.4rem 0.5rem;
+  margin: 0.4rem 0.5rem;
   max-width: 1200px;
 }
 .buttonSet {
@@ -445,7 +443,7 @@ section {
 }
 .Lbutton {
   all: unset;
-  padding: 0.5rem;
+  padding: 0.8rem;
   background-color: #edecf0;
   border-radius: 5px;
   transition: color 0.3s ease;
@@ -492,14 +490,15 @@ section {
   transition: background-color 0.3s ease;
 }
 .detailsWrapTwo {
-  /* margin-top: 1rem; */
   display: flex;
   align-items: center;
   flex: 17;
-  padding: 5px 2rem;
+
+  padding: 1rem 2rem;
 }
 .divideLeft {
   display: flex;
+  justify-content: center;
   align-items: center;
   flex: 15;
 }
@@ -546,6 +545,9 @@ section {
   width: 100%;
   border-radius: 5px;
   background-color: #bbb9c8;
+  margin: 1rem 1.5rem;
+  color: #290644;
+  padding: 0 1rem;
 }
 .box {
   flex: 1;
@@ -555,14 +557,23 @@ section {
 }
 .wrapper {
   display: flex;
+  justify-content: center;
 }
 .wrapperTwo {
   display: flex;
   flex-direction: column;
 }
+.boxTitle {
+  font-size: 1rem;
+  margin: 0.5rem 0.5rem;
+}
+.dataTile {
+  font-size: 1rem;
+  font-weight: 700;
+}
 .boxDataWrapper {
-  padding: 0.5rem;
-  margin: 0 1rem;
+  margin: 0.9rem 0.5rem;
+  border-radius: 20px;
 }
 .boxData {
   display: flex;
@@ -580,13 +591,20 @@ section {
 }
 .dataValue {
   font-weight: 400;
+  font-size: 1rem;
+  color: #333;
 }
 .txtBox {
   background-color: white;
   margin: 0.5rem;
   padding: 0.5rem;
-  font-weight: 400;
+  font-size: 15px;
   border-radius: 5px;
+  word-spacing: 2px;
+  word-wrap: wrap;
+  color: black;
+  font-weight: 400;
+  padding-bottom: 1rem;
 }
 .line {
   width: 95%;
@@ -666,6 +684,7 @@ section {
   padding-bottom: 1.5rem;
   text-decoration: none;
 }
+
 .AfterList {
   padding: 1rem;
 }
@@ -761,8 +780,8 @@ h1 {
   .detailsWrap {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
     flex: 17;
     padding: 5px 1rem;
   }
@@ -777,9 +796,10 @@ h1 {
     margin-left: 0px;
   }
   .company {
-    width: 350px;
-    height: 100px;
-    padding: 0.5rem;
+    min-width: 250px;
+    height: 70px;
+    align-self: center;
+    /* padding: 0.5rem; */
     flex: 0;
   }
   .buttons {
@@ -801,6 +821,9 @@ h1 {
   }
   .divideLeft {
     margin-bottom: 1rem;
+    justify-content: space-between;
+    align-items: default;
+    width: 100%;
   }
   #srch {
     display: none;
